<resources>
    <string name="app_name">HackerNews</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="search_content_description">Search for news</string>
    <string name="refresh">Refresh</string>
    <string name="refresh_content_description">Refresh the news</string>
    <string name="web_link">Open Link</string>
    <string name="web_link_content_description">Open link in browser</string>
    <string name="news_title">News</string>
    <string name="filter_news">Filter News</string>
    <string name="content_description_filter_news">Filter the news</string>
    <string name="divider_text">|</string>
    <string name="divider_bubble">•</string>
    <string name="link_image_description">Link to article or story</string>
    <string name="lorem_ipsum_paragraph">Lorem ipsum dolor sit amet, cu nec mucius urbanitas, ut mea quidam invenire. Falli tincidunt percipitur vix cu, porro saepe dolores an vis. Prompta labores et ius. Ne veniam corpora oporteat per, pri ei virtute utroque nusquam, tamquam mnesarchum est ad. Quodsi bonorum labores te mel.
        \n Eu qui purto electram. Te pri odio liber. In homero saperet est, te tibique laboramus sit. Mea ex intellegam complectitur. Ad wisi brute mentitum his.
        \n Ea eos melius scripta nostrum, cu dicit consequat concludaturque mea, sed te alii meis omnes. Eu vis sint viris tractatos, aeque praesent salutatus id sea, meliore deserunt eos ne. Qui eu doming facilisis. Nonumes expetendis eam ut, sit oblique labitur te, populo corrumpit te eos.
    </string>
    <string name="lorem_ipsum_small_paragraph">Sed id integre senserit. Mel sumo similique in, at eos inani epicuri abhorreant. Vel no gubergren dissentias instructior. His soleat putant imperdiet an. Te maiorum volumus eam, nam laoreet expetendis contentiones no. Sed ex aeterno adolescens, ut quaeque bonorum nusquam sea.</string>
    <string name="expand_comment_arrow_description">expand comment</string>

    <string name="api_error_message">Could not refresh data</string>
    <string name="try_again">Try Again</string>
    <string name="update_in_progress">Update in progress…</string>
    <string name="notification_title">Found news you are interested in</string>
    <string name="notification_content">There are %1$d stories with \'%2$s\' in the title!</string>
    <string name="notification_permission_denied">Notification Permission denied. Enable in settings</string>
    <string name="worker_error_title">Error with work manager</string>
    <string name="worker_error_content">Error is %1$s</string>
</resources>