<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="newsItem"
            type="com.example.android.hackernews.data.entities.NewsItem" />

        <variable
            name="clickListener"
            type="com.example.android.hackernews.newslist.NewsClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSecondaryContainer">

        <LinearLayout
            android:id="@+id/separatorContainer"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/commentAuthor"
            style="@style/TextAppearance.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text='@{newsItem.author ?? "~UNKNOWN~"}'
            app:layout_constraintStart_toEndOf="@+id/expandCommentArrow"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="badsectoracula" />

        <TextView
            android:id="@+id/commentDividerBubble"
            style="@style/TextAppearance.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="8dp"
            android:text="@string/divider_bubble"
            app:layout_constraintStart_toEndOf="@+id/commentAuthor"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/commentTime"
            style="@style/TextAppearance.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="8dp"
            app:displayTime="@{newsItem.time}"
            app:layout_constraintStart_toEndOf="@+id/commentDividerBubble"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="1 hours ago" />

        <TextView
            android:id="@+id/commentText"
            style="@style/TextAppearance.BodyLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            app:displayHTML="@{newsItem.text}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/commentAuthor"
            app:layout_constraintTop_toBottomOf="@+id/commentAuthor"
            tools:text="@string/lorem_ipsum_paragraph" />

        <ImageView
            android:id="@+id/expandCommentArrow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/expand_comment_arrow_description"
            app:layout_constraintBottom_toBottomOf="@+id/commentAuthor"
            app:layout_constraintStart_toEndOf="@id/separatorContainer"
            app:layout_constraintTop_toTopOf="@+id/commentAuthor"
            app:srcCompat="@drawable/ic_baseline_keyboard_arrow_down_24" />

        <TextView
            android:id="@+id/childCommentsNumber"
            style="@style/TextAppearance.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:displayChildCount="@{newsItem.childNewsItems}"
            app:goneIfListEmptyOrNull="@{newsItem.childNewsItems}"
            app:layout_constraintBottom_toBottomOf="@+id/expandCommentArrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/expandCommentArrow"
            tools:text="2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>